--- a/index.html
+++ b/index.html
@@ -54,9 +54,25 @@
   -->
 
   <!-- ADD YOUR CODE HERE -->
+<div class="product-card">
+        <img src="images/coffee.jpg" alt="Cappuccino" class="product-image">
+        <div class="content">
+            <h2 class="category">Hot Drinks</h2>
+            <h1 class="title">Perfect Cappuccino</h1>
+            <p class="description">
+                Indulge in the creamy delight of our Perfect Cappuccino.
+                This exquisite coffee creation combines a shot of rich espresso
+                with equal parts of steamed milk and silky microfoam, resulting
+                in a delightful balance of flavor and texture.
+            </p>
+            <p class="price">$4.99</p>
+            <a href="#" class="purchase-link">BUY NOW</a>
+        </div>
+    </div>
 
 
   <!-- ADD YOUR CITATION HERE -->
+      <!-- Citation: Image sourced from README.md -->
 
 </body>
 
